@@ -28,11 +28,11 @@ class MyStatusBar(wx.StatusBar):
         wx.StatusBar.__init__(self, parent, -1)
 
         if wx.Platform == '__WXMSW__':
-            self.SetFieldsCount(6)
-            self.SetStatusWidths([-1, 70, 60, 40, 60, 45])
+            self.SetFieldsCount(5)
+            self.SetStatusWidths([-1, 70, 60, 40, 60])
         elif wx.Platform == '__WXGTK__':
-            self.SetFieldsCount(6)
-            self.SetStatusWidths([-1, 70, 60, 40, 60, 45])
+            self.SetFieldsCount(5)
+            self.SetStatusWidths([-1, 70, 60, 40, 60])
         else:
             self.SetFieldsCount(5)
             self.SetStatusWidths([-1, 70, 60, 40, 60])
